# pygame-widget-kit

./: .gitignore  LICENSE  README.md  deneme.html  link.html  pyproject.toml
src/pygame_widget_kit/: Animation.py  Button.py  Layout.py  Radio.py  Select.py  Slider.py  Text.py  TextArea.py  TextInput.py  ToggleButton.py  UIComponent.py  UIManager.py  Widget.py  __init__.py
