[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygame-widget-kit"
version = "0.0.3"
authors = [
  { name="Sinan Orgu", email="sinanorguuu@gmail.com" },
]
description = "A GUI framework built on Pygame. Designed as a retained-mode UI system with a component tree, extensible widgets, and focus management."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }  
keywords = ["pygame", "ui", "gui", "toolkit", "widgets", "interface", "game-development", "inputbox", "buttons"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: pygame",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


dependencies = [
    "pygame>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/sinanorgu/pygame-widget-kit"
"Repository" = "https://github.com/sinanorgu/pygame-widget-kit"
"Issues" = "https://github.com/sinanorgu/pygame-widget-kit/issues"